// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with \`untoggledComponent when feature is disabled should match snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ConfigureFlopflip)
    adapter={
      Object {
        "configure": [Function],
        "getFlag": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
        "reset": [Function],
        "setIsReady": [Function],
        "waitUntilConfigured": [Function],
      }
    }
    adapterArgs={Object {}}
  >
    <ConfigureFlopflip
      adapter={
        Object {
          "configure": [Function],
          "getFlag": [Function],
          "getIsReady": [Function],
          "reconfigure": [Function],
          "reset": [Function],
          "setIsReady": [Function],
          "waitUntilConfigured": [Function],
        }
      }
      adapterArgs={Object {}}
      defaultFlags={Object {}}
      handleUpdateFlags={[Function]}
      handleUpdateStatus={[Function]}
      shouldDeferAdapterConfiguration={false}
    >
      <ConfigureAdapter
        adapter={
          Object {
            "configure": [Function],
            "getFlag": [Function],
            "getIsReady": [Function],
            "reconfigure": [Function],
            "reset": [Function],
            "setIsReady": [Function],
            "waitUntilConfigured": [Function],
          }
        }
        adapterArgs={
          Object {
            "onFlagsStateChange": [Function],
            "onStatusStateChange": [Function],
          }
        }
        defaultFlags={Object {}}
        render={null}
        shouldDeferAdapterConfiguration={false}
      >
        <branchOnFeatureToggle(ToggledComponent)>
          <withProps(omitProps(BranchOnFeatureToggle))
            @flopflip/flags={
              Object {
                "flag1": false,
              }
            }
            dispatch={[Function]}
          >
            <omitProps(BranchOnFeatureToggle)
              @flopflip/flags={
                Object {
                  "flag1": false,
                }
              }
              dispatch={[Function]}
              isFeatureEnabled={false}
            >
              <BranchOnFeatureToggle
                dispatch={[Function]}
                isFeatureEnabled={false}
              >
                <UntoggledComponent
                  dispatch={[Function]}
                  isFeatureEnabled={false}
                >
                  <div />
                </UntoggledComponent>
              </BranchOnFeatureToggle>
            </omitProps(BranchOnFeatureToggle)>
          </withProps(omitProps(BranchOnFeatureToggle))>
        </branchOnFeatureToggle(ToggledComponent)>
      </ConfigureAdapter>
    </ConfigureFlopflip>
  </Connect(ConfigureFlopflip)>
</Provider>
`;

exports[`with \`untoggledComponent when feature is disabled when enabling feature should match snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ConfigureFlopflip)
    adapter={
      Object {
        "configure": [Function],
        "getFlag": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
        "reset": [Function],
        "setIsReady": [Function],
        "waitUntilConfigured": [Function],
      }
    }
    adapterArgs={Object {}}
  >
    <ConfigureFlopflip
      adapter={
        Object {
          "configure": [Function],
          "getFlag": [Function],
          "getIsReady": [Function],
          "reconfigure": [Function],
          "reset": [Function],
          "setIsReady": [Function],
          "waitUntilConfigured": [Function],
        }
      }
      adapterArgs={Object {}}
      defaultFlags={Object {}}
      handleUpdateFlags={[Function]}
      handleUpdateStatus={[Function]}
      shouldDeferAdapterConfiguration={false}
    >
      <ConfigureAdapter
        adapter={
          Object {
            "configure": [Function],
            "getFlag": [Function],
            "getIsReady": [Function],
            "reconfigure": [Function],
            "reset": [Function],
            "setIsReady": [Function],
            "waitUntilConfigured": [Function],
          }
        }
        adapterArgs={
          Object {
            "onFlagsStateChange": [Function],
            "onStatusStateChange": [Function],
          }
        }
        defaultFlags={Object {}}
        render={null}
        shouldDeferAdapterConfiguration={false}
      >
        <branchOnFeatureToggle(ToggledComponent)>
          <withProps(omitProps(BranchOnFeatureToggle))
            @flopflip/flags={
              Object {
                "flag1": true,
              }
            }
            dispatch={[Function]}
          >
            <omitProps(BranchOnFeatureToggle)
              @flopflip/flags={
                Object {
                  "flag1": true,
                }
              }
              dispatch={[Function]}
              isFeatureEnabled={true}
            >
              <BranchOnFeatureToggle
                dispatch={[Function]}
                isFeatureEnabled={true}
              >
                <ToggledComponent
                  dispatch={[Function]}
                  isFeatureEnabled={true}
                >
                  <div />
                </ToggledComponent>
              </BranchOnFeatureToggle>
            </omitProps(BranchOnFeatureToggle)>
          </withProps(omitProps(BranchOnFeatureToggle))>
        </branchOnFeatureToggle(ToggledComponent)>
      </ConfigureAdapter>
    </ConfigureFlopflip>
  </Connect(ConfigureFlopflip)>
</Provider>
`;

exports[`without \`untoggledComponent when feature is disabled should match snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ConfigureFlopflip)
    adapter={
      Object {
        "configure": [Function],
        "getFlag": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
        "reset": [Function],
        "setIsReady": [Function],
        "waitUntilConfigured": [Function],
      }
    }
    adapterArgs={Object {}}
  >
    <ConfigureFlopflip
      adapter={
        Object {
          "configure": [Function],
          "getFlag": [Function],
          "getIsReady": [Function],
          "reconfigure": [Function],
          "reset": [Function],
          "setIsReady": [Function],
          "waitUntilConfigured": [Function],
        }
      }
      adapterArgs={Object {}}
      defaultFlags={Object {}}
      handleUpdateFlags={[Function]}
      handleUpdateStatus={[Function]}
      shouldDeferAdapterConfiguration={false}
    >
      <ConfigureAdapter
        adapter={
          Object {
            "configure": [Function],
            "getFlag": [Function],
            "getIsReady": [Function],
            "reconfigure": [Function],
            "reset": [Function],
            "setIsReady": [Function],
            "waitUntilConfigured": [Function],
          }
        }
        adapterArgs={
          Object {
            "onFlagsStateChange": [Function],
            "onStatusStateChange": [Function],
          }
        }
        defaultFlags={Object {}}
        render={null}
        shouldDeferAdapterConfiguration={false}
      >
        <branchOnFeatureToggle(ToggledComponent)>
          <withProps(omitProps(BranchOnFeatureToggle))
            @flopflip/flags={
              Object {
                "flag1": false,
              }
            }
            dispatch={[Function]}
          >
            <omitProps(BranchOnFeatureToggle)
              @flopflip/flags={
                Object {
                  "flag1": false,
                }
              }
              dispatch={[Function]}
              isFeatureEnabled={false}
            >
              <BranchOnFeatureToggle
                dispatch={[Function]}
                isFeatureEnabled={false}
              >
                <DefaultUntoggledComponent
                  dispatch={[Function]}
                  isFeatureEnabled={false}
                />
              </BranchOnFeatureToggle>
            </omitProps(BranchOnFeatureToggle)>
          </withProps(omitProps(BranchOnFeatureToggle))>
        </branchOnFeatureToggle(ToggledComponent)>
      </ConfigureAdapter>
    </ConfigureFlopflip>
  </Connect(ConfigureFlopflip)>
</Provider>
`;

exports[`without \`untoggledComponent when feature is disabled when enabling feature should match snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ConfigureFlopflip)
    adapter={
      Object {
        "configure": [Function],
        "getFlag": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
        "reset": [Function],
        "setIsReady": [Function],
        "waitUntilConfigured": [Function],
      }
    }
    adapterArgs={Object {}}
  >
    <ConfigureFlopflip
      adapter={
        Object {
          "configure": [Function],
          "getFlag": [Function],
          "getIsReady": [Function],
          "reconfigure": [Function],
          "reset": [Function],
          "setIsReady": [Function],
          "waitUntilConfigured": [Function],
        }
      }
      adapterArgs={Object {}}
      defaultFlags={Object {}}
      handleUpdateFlags={[Function]}
      handleUpdateStatus={[Function]}
      shouldDeferAdapterConfiguration={false}
    >
      <ConfigureAdapter
        adapter={
          Object {
            "configure": [Function],
            "getFlag": [Function],
            "getIsReady": [Function],
            "reconfigure": [Function],
            "reset": [Function],
            "setIsReady": [Function],
            "waitUntilConfigured": [Function],
          }
        }
        adapterArgs={
          Object {
            "onFlagsStateChange": [Function],
            "onStatusStateChange": [Function],
          }
        }
        defaultFlags={Object {}}
        render={null}
        shouldDeferAdapterConfiguration={false}
      >
        <branchOnFeatureToggle(ToggledComponent)>
          <withProps(omitProps(BranchOnFeatureToggle))
            @flopflip/flags={
              Object {
                "flag1": true,
              }
            }
            dispatch={[Function]}
          >
            <omitProps(BranchOnFeatureToggle)
              @flopflip/flags={
                Object {
                  "flag1": true,
                }
              }
              dispatch={[Function]}
              isFeatureEnabled={true}
            >
              <BranchOnFeatureToggle
                dispatch={[Function]}
                isFeatureEnabled={true}
              >
                <ToggledComponent
                  dispatch={[Function]}
                  isFeatureEnabled={true}
                >
                  <div />
                </ToggledComponent>
              </BranchOnFeatureToggle>
            </omitProps(BranchOnFeatureToggle)>
          </withProps(omitProps(BranchOnFeatureToggle))>
        </branchOnFeatureToggle(ToggledComponent)>
      </ConfigureAdapter>
    </ConfigureFlopflip>
  </Connect(ConfigureFlopflip)>
</Provider>
`;
